--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
     "prettier": "^2.4.1"
   },
   "dependencies": {
+    "@iconify/json": "^2.1.53",
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.1.3",
+    "css-tooltip": "^0.3.4",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
+    "tooltip": "^1.6.1",
     "vanilla-tilt": "^1.7.2"
   }
 }
